--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.3.4",
+    "colors": "^1.4.0",
     "express": "^4.18.2"
   }
 }
