Added env and config files for starting server and connecting db.

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -4,7 +4,7 @@ DATABASE_USER= postgres
 DATABASE_PASS= postgres
 DATABASE_HOST= localhost
 DATABASE_PORT= 5432
-DATABASE_NAME= gotta-go
+DATABASE_NAME= gotta_go
 
 SECRET_KEY= CHANGE_ME
 BCRYPT_WORK_FACTOR= 13
