--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "axios": "^1.3.4",
     "expo": "^47.0.13",
     "expo-status-bar": "~1.4.2",
     "react-native": "0.70.5",
