--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.6",
     "axios": "^1.3.4",
     "expo": "^47.0.13",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react-native": "0.70.5",
     "react-native-maps": "1.3.2"
