--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,8 +16,10 @@
     "expo": "^47.0.13",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
-    "react-native": "0.70.5",
-    "react-native-maps": "1.3.2"
+    "react-native": "0.70.8",
+    "react-native-maps": "1.3.2",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
