--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.4.2",
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
